--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Set Up Header -->
+    <header class="container-fluid text-center">
+        <h1>Project Euler 050</h1>
+        <h2>Consecutive Prime Sum</h2>
+    </header>
 </body>
 </html>
