Formatted document at index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Euler 050 - Consecutive Prime Sum</title>
     <!-- Load Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Set Up Header -->
     <header class="container-fluid text-center">
@@ -21,8 +24,10 @@
         <p>The prime 41, can be written as the sum of six consecutive primes:</p>
         <p><span class="terms">41 = 2 + 3 + 5 + 7 + 11 + 13</span></p>
         <p>This is the longest sum of consecutive primes that adds to a prime below one-hundred.</p>
-        <p>The longest sum of consecutive primes below one-thousand that adds to a prime, contains 21 terms, and is equal to 953.</p>
-        <p>Which prime, below one-million, can be written as the sum of the most consecutive primes?  Begin by entering the limit.</p>
+        <p>The longest sum of consecutive primes below one-thousand that adds to a prime, contains 21 terms, and is
+            equal to 953.</p>
+        <p>Which prime, below one-million, can be written as the sum of the most consecutive primes? Begin by entering
+            the limit.</p>
     </section>
 
     <!-- Set Up Form -->
@@ -31,7 +36,8 @@
             <!-- Set Up Label and Input -->
             <article class="mb-3">
                 <label for="mylimit" class="form-control">Limit (Required)</label>
-                <input class="form-control" title="Enter whole number between 100 and 1000000 (without leading zeros)" placeholder="Enter whole number between 100 and 1000000 (without leading zeros)" id="mylimit">
+                <input class="form-control" title="Enter whole number between 100 and 1000000 (without leading zeros)"
+                    placeholder="Enter whole number between 100 and 1000000 (without leading zeros)" id="mylimit">
             </article>
 
             <!-- Set Up and Center Buttons -->
@@ -48,4 +54,5 @@
         <script src="js/script.js"></script>
     </section>
 </body>
+
 </html>
